[gd_scene load_steps=76 format=3 uid="uid://dxuaxee66xh0s"]

[ext_resource type="Script" path="res://src/player/player.gd" id="1_h3lxn"]
[ext_resource type="Texture2D" uid="uid://2a6063bew80f" path="res://assets/hooded.png" id="2_s65be"]
[ext_resource type="Script" path="res://src/player/Camera.gd" id="3_rxrl8"]
[ext_resource type="Script" path="res://src/gameui/health_bar.gd" id="4_2expj"]
[ext_resource type="PackedScene" uid="uid://nqylemsgum07" path="res://scenes/hotbar/hotbar.tscn" id="5_83tp8"]
[ext_resource type="Texture2D" uid="uid://cknmc5r2si4w3" path="res://assets/shop/Coin_Gems/MonedaD.png" id="6_edqyc"]
[ext_resource type="FontFile" uid="uid://d2nanr55e7tpq" path="res://assets/fonts/m5x7.ttf" id="7_ge5ve"]
[ext_resource type="Theme" uid="uid://7v05cnvo5w3p" path="res://assets/until_boss_label.tres" id="8_ef6vy"]
[ext_resource type="Texture2D" uid="uid://dj5m7w6r0ahst" path="res://assets/Hearts/PNG/health_bar/health_bar_decoration.png" id="9_t5cxx"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8epfv"]
size = Vector2(32, 78)

[sub_resource type="AtlasTexture" id="AtlasTexture_8hu5e"]
atlas = ExtResource("2_s65be")
region = Rect2(576, 1536, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_klt8o"]
atlas = ExtResource("2_s65be")
region = Rect2(768, 1536, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_f7r5w"]
atlas = ExtResource("2_s65be")
region = Rect2(960, 1536, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_kl11m"]
atlas = ExtResource("2_s65be")
region = Rect2(1152, 1536, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_ch2u3"]
atlas = ExtResource("2_s65be")
region = Rect2(1344, 1536, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_p25j1"]
atlas = ExtResource("2_s65be")
region = Rect2(0, 1344, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_g8rkm"]
atlas = ExtResource("2_s65be")
region = Rect2(192, 1344, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_8wxqn"]
atlas = ExtResource("2_s65be")
region = Rect2(384, 1344, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_a1cgu"]
atlas = ExtResource("2_s65be")
region = Rect2(576, 1344, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_dpeey"]
atlas = ExtResource("2_s65be")
region = Rect2(768, 1344, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_0hfn8"]
atlas = ExtResource("2_s65be")
region = Rect2(960, 1344, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_50lvd"]
atlas = ExtResource("2_s65be")
region = Rect2(1152, 1344, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_v3ysg"]
atlas = ExtResource("2_s65be")
region = Rect2(1344, 1344, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_4ksgj"]
atlas = ExtResource("2_s65be")
region = Rect2(1344, 1344, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_yfkb5"]
atlas = ExtResource("2_s65be")
region = Rect2(1152, 1344, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_7yf61"]
atlas = ExtResource("2_s65be")
region = Rect2(960, 1344, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_af31k"]
atlas = ExtResource("2_s65be")
region = Rect2(0, 384, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_7i1dh"]
atlas = ExtResource("2_s65be")
region = Rect2(192, 384, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_sur0a"]
atlas = ExtResource("2_s65be")
region = Rect2(384, 384, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_kq11e"]
atlas = ExtResource("2_s65be")
region = Rect2(576, 384, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_n0un4"]
atlas = ExtResource("2_s65be")
region = Rect2(0, 960, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_3jw8c"]
atlas = ExtResource("2_s65be")
region = Rect2(192, 960, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_lubee"]
atlas = ExtResource("2_s65be")
region = Rect2(384, 960, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_ii0ek"]
atlas = ExtResource("2_s65be")
region = Rect2(576, 960, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_lmw0y"]
atlas = ExtResource("2_s65be")
region = Rect2(768, 960, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_hnwmh"]
atlas = ExtResource("2_s65be")
region = Rect2(960, 960, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_6u1np"]
atlas = ExtResource("2_s65be")
region = Rect2(1152, 960, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_qbv8s"]
atlas = ExtResource("2_s65be")
region = Rect2(1344, 960, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_v8wbn"]
atlas = ExtResource("2_s65be")
region = Rect2(0, 1152, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_7isc3"]
atlas = ExtResource("2_s65be")
region = Rect2(192, 1152, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_kuiw8"]
atlas = ExtResource("2_s65be")
region = Rect2(384, 1152, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_4rums"]
atlas = ExtResource("2_s65be")
region = Rect2(576, 1152, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_cb8a1"]
atlas = ExtResource("2_s65be")
region = Rect2(1344, 1344, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_ahvhh"]
atlas = ExtResource("2_s65be")
region = Rect2(1152, 1344, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_nl1ma"]
atlas = ExtResource("2_s65be")
region = Rect2(960, 1344, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_7equc"]
atlas = ExtResource("2_s65be")
region = Rect2(768, 1344, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_dyate"]
atlas = ExtResource("2_s65be")
region = Rect2(576, 1344, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_66w6q"]
atlas = ExtResource("2_s65be")
region = Rect2(384, 1344, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_boyvq"]
atlas = ExtResource("2_s65be")
region = Rect2(192, 1344, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_fgbbq"]
atlas = ExtResource("2_s65be")
region = Rect2(0, 1344, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_2oofd"]
atlas = ExtResource("2_s65be")
region = Rect2(576, 1152, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_q6t5l"]
atlas = ExtResource("2_s65be")
region = Rect2(384, 1152, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_451nf"]
atlas = ExtResource("2_s65be")
region = Rect2(192, 1152, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_r05ag"]
atlas = ExtResource("2_s65be")
region = Rect2(0, 1152, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_me1os"]
atlas = ExtResource("2_s65be")
region = Rect2(0, 576, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_5ym34"]
atlas = ExtResource("2_s65be")
region = Rect2(192, 576, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_tk7xw"]
atlas = ExtResource("2_s65be")
region = Rect2(384, 576, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_dh4uf"]
atlas = ExtResource("2_s65be")
region = Rect2(576, 576, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_c6p8a"]
atlas = ExtResource("2_s65be")
region = Rect2(768, 576, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_hg0nn"]
atlas = ExtResource("2_s65be")
region = Rect2(960, 576, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_241ad"]
atlas = ExtResource("2_s65be")
region = Rect2(1152, 576, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_ya42q"]
atlas = ExtResource("2_s65be")
region = Rect2(1344, 576, 192, 192)

[sub_resource type="SpriteFrames" id="SpriteFrames_an3xs"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8hu5e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_klt8o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f7r5w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kl11m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ch2u3")
}],
"loop": false,
"name": &"attack",
"speed": 16.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_p25j1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g8rkm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8wxqn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a1cgu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dpeey")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0hfn8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_50lvd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v3ysg")
}],
"loop": false,
"name": &"duck",
"speed": 16.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4ksgj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yfkb5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7yf61")
}],
"loop": true,
"name": &"duck_idle",
"speed": 16.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_af31k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7i1dh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sur0a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kq11e")
}],
"loop": true,
"name": &"idle",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_n0un4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3jw8c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lubee")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ii0ek")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lmw0y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hnwmh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6u1np")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qbv8s")
}],
"loop": true,
"name": &"jump",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_v8wbn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7isc3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kuiw8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4rums")
}],
"loop": false,
"name": &"teleport",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_cb8a1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ahvhh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nl1ma")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7equc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dyate")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_66w6q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_boyvq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fgbbq")
}],
"loop": false,
"name": &"unduck",
"speed": 16.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2oofd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q6t5l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_451nf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r05ag")
}],
"loop": false,
"name": &"unteleport",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_me1os")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5ym34")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tk7xw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dh4uf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c6p8a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hg0nn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_241ad")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ya42q")
}],
"loop": true,
"name": &"walk",
"speed": 8.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_ur73w"]
radius = 20.0
height = 80.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_grihh"]
size = Vector2(64, 72)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_u6dew"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_52287"]
bg_color = Color(0.662745, 0.117647, 0.133333, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_l04q3"]
bg_color = Color(0.0980392, 0.0980392, 0.0980392, 1)
expand_margin_left = 1.0
expand_margin_top = 1.0
expand_margin_right = 1.0
expand_margin_bottom = 1.0
shadow_color = Color(0, 0, 0, 0.27451)
shadow_offset = Vector2(0, 3)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_tal8c"]
bg_color = Color(1, 1, 1, 1)

[sub_resource type="AtlasTexture" id="AtlasTexture_r1n4w"]
atlas = ExtResource("6_edqyc")
region = Rect2(0, 0, 16, 16)

[sub_resource type="Animation" id="Animation_2uu1o"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Animation:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"attack"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Animation:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_6a4x5"]
resource_name = "hit"
length = 0.8
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Animation:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"attack"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Animation:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.1),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"check_attack_hit"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_eedaa"]
_data = {
"RESET": SubResource("Animation_2uu1o"),
"hit": SubResource("Animation_6a4x5")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_b4u3a"]
size = Vector2(64, 78)

[sub_resource type="Curve" id="Curve_55des"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(0.975962, 0), 0.0, 0.0, 0, 0]
point_count = 2

[node name="Player" type="CharacterBody2D" groups=["player"]]
collision_layer = 2
script = ExtResource("1_h3lxn")

[node name="Hitbox" type="CollisionShape2D" parent="."]
position = Vector2(0, 9)
shape = SubResource("RectangleShape2D_8epfv")

[node name="Animation" type="AnimatedSprite2D" parent="."]
scale = Vector2(0.5, 0.5)
sprite_frames = SubResource("SpriteFrames_an3xs")
animation = &"attack"

[node name="Camera" type="Camera2D" parent="."]
limit_left = 0
limit_top = 0
limit_right = 1920
limit_bottom = 1080
position_smoothing_enabled = true
rotation_smoothing_enabled = true
script = ExtResource("3_rxrl8")

[node name="RainParticles" type="CPUParticles2D" parent="Camera"]
position = Vector2(0, -540)
lifetime = 0.6
emission_shape = 3
emission_rect_extents = Vector2(960, 1)
scale_amount_min = 2.0
scale_amount_max = 4.0
color = Color(0, 0.54902, 0.54902, 1)

[node name="UnduckRayCast" type="RayCast2D" parent="."]

[node name="TeleportShapeCast" type="ShapeCast2D" parent="."]
shape = SubResource("CapsuleShape2D_ur73w")
target_position = Vector2(0, 8)

[node name="HitCooldown" type="Timer" parent="."]
one_shot = true

[node name="MeleeArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 8
monitorable = false

[node name="Rectangle" type="CollisionShape2D" parent="MeleeArea"]
position = Vector2(48, 12)
shape = SubResource("RectangleShape2D_grihh")
disabled = true

[node name="HitCollisionDelay" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="UI" type="CanvasLayer" parent="."]

[node name="HealthBar" type="ProgressBar" parent="UI"]
z_index = 1
offset_left = 76.0
offset_top = 28.0
offset_right = 260.0
offset_bottom = 56.0
theme_override_styles/background = SubResource("StyleBoxEmpty_u6dew")
theme_override_styles/fill = SubResource("StyleBoxFlat_52287")
value = 75.0
show_percentage = false
script = ExtResource("4_2expj")

[node name="DamageBar" type="ProgressBar" parent="UI/HealthBar"]
z_index = -1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/background = SubResource("StyleBoxFlat_l04q3")
theme_override_styles/fill = SubResource("StyleBoxFlat_tal8c")
value = 85.0
show_percentage = false

[node name="Timer" type="Timer" parent="UI/HealthBar"]
wait_time = 0.4
one_shot = true

[node name="Hotbar" parent="UI" instance=ExtResource("5_83tp8")]
visible = false
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -28.0
offset_top = -96.0
offset_right = 28.0
offset_bottom = -80.0
grow_vertical = 0
scale = Vector2(6, 6)
pivot_offset = Vector2(28, 8)
size_flags_horizontal = 6
size_flags_vertical = 6

[node name="CoinControl" type="Control" parent="UI"]
layout_mode = 3
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -56.0
offset_bottom = 64.0
grow_horizontal = 0

[node name="CoinIcon" type="TextureRect" parent="UI/CoinControl"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -40.0
offset_bottom = 40.0
grow_horizontal = 0
texture = SubResource("AtlasTexture_r1n4w")

[node name="Label" type="Label" parent="UI/CoinControl"]
layout_mode = 1
offset_left = -48.0
offset_right = 16.0
offset_bottom = 29.0
theme_override_fonts/font = ExtResource("7_ge5ve")
theme_override_font_sizes/font_size = 36
text = "0"
horizontal_alignment = 2
vertical_alignment = 1

[node name="UntilBoss" type="Label" parent="UI"]
visible = false
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_right = 20.0
offset_bottom = 16.0
grow_horizontal = 2
theme = ExtResource("8_ef6vy")
text = "Stages until boss: 4"

[node name="DecoHealthBar" type="Sprite2D" parent="UI"]
position = Vector2(136, 42)
scale = Vector2(4, 4)
texture = ExtResource("9_t5cxx")

[node name="ShootCooldown" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="CoyoteTimer" type="Timer" parent="."]
wait_time = 0.4
one_shot = true

[node name="JumpBuffer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_eedaa")
}

[node name="UnshrinkArea" type="Area2D" parent="."]
process_mode = 1
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="UnshrinkArea"]
position = Vector2(0, 9)
shape = SubResource("RectangleShape2D_b4u3a")

[node name="ShrinkParticles" type="CPUParticles2D" parent="."]
scale = Vector2(8, 8)
emitting = false
amount = 256
lifetime = 0.5
one_shot = true
explosiveness = 1.0
spread = 180.0
gravity = Vector2(0, 0)
initial_velocity_min = 50.0
initial_velocity_max = 100.0
scale_amount_curve = SubResource("Curve_55des")

[connection signal="input_event" from="." to="." method="_on_input_event"]
[connection signal="animation_finished" from="Animation" to="." method="_on_animation_finished"]
[connection signal="timeout" from="HitCooldown" to="." method="_on_hit_cooldown_timeout"]
[connection signal="area_entered" from="MeleeArea" to="." method="_on_melee_area_area_entered"]
[connection signal="body_entered" from="MeleeArea" to="." method="_on_melee_area_body_entered"]
[connection signal="timeout" from="HitCollisionDelay" to="." method="_on_hit_collision_delay_timeout"]
[connection signal="timeout" from="UI/HealthBar/Timer" to="UI/HealthBar" method="_on_timer_timeout"]
[connection signal="used_skill" from="UI/Hotbar/Teleportation" to="." method="perform_teleportation"]
[connection signal="used_skill" from="UI/Hotbar/Leaping" to="." method="perform_leaping"]
[connection signal="used_skill" from="UI/Hotbar/Shrinking" to="." method="perform_shrinking"]
[connection signal="timeout" from="ShootCooldown" to="." method="_on_shoot_cooldown_timeout"]
[connection signal="timeout" from="CoyoteTimer" to="." method="_on_coyote_timer_timeout"]

[editable path="UI/Hotbar"]
